<resources>
    <string name="app_name">Laplace</string>
    <string name="title_activity_base">baseActivity</string>
    <string name="title_activity_luncher">LuncherActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_homeid">ID</string>
    <string name="nav_pay">L-Pay</string>
    <string name="googleverity">谷歌验证器</string>
    <string name="currenttime">实时</string>
    <string name="monitoringcenter">监控中心</string>

    <string name="guidanceword">Laplace protocol</string>
    <string name="title_activity_creat_identity">CreatIdentityActivity</string>
    <string name="creat_identity_text">创建身份ID</string>
    <string name="id_name_textview">命名</string>


    <string name="development_specification">努力开发中...</string>
</resources>
